--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,9 +1,11 @@
 $black: #000000;
 $black2: #666666;
+$black3: #3c434b;
 $yellow: #f3b600;
 $gray: #f1f2f8;
 $white: #ffffff;
 $gray2: #a4a4a4;
+$gray3: #f1f2f8;
 
 body {
   max-width: 1366px;
@@ -30,80 +32,300 @@ body {
       color: $black;
       margin: 48px 0 50px 0;
     }
-    .content-article {
-      .title {
-        font-weight: 400;
-        font-size: 24px;
-        text-transform: uppercase;
-        color: $black2;
-      }
-      .title-sub {
-        font-weight: 700;
-        font-size: 18px;
-        color: $black2;
-        margin: 25px 0 14px 0;
-      }
-      .text-content {
-        .line-content {
+    .main-article {
+      display: flex;
+      .content-article {
+        width: 75%;
+        .title {
           font-weight: 400;
-          font-size: 16px;
+          font-size: 24px;
+          text-transform: uppercase;
           color: $black2;
-          margin: 0;
-          .line-sub {
-            display: flex;
-            align-items: center;
-            margin: 0 0 10px 10px;
-            .circle-content {
-              height: 8px;
-              width: 8px;
-              background-color: $yellow;
-              border-radius: 50%;
-              -moz-border-radius: 50%;
-              -webkit-border-radius: 50%;
-              margin-right: 7px;
+        }
+        .title-sub {
+          font-weight: 700;
+          font-size: 18px;
+          color: $black2;
+          margin: 25px 0 14px 0;
+        }
+        .text-content {
+          .line-content {
+            font-weight: 400;
+            font-size: 16px;
+            color: $black2;
+            margin: 0;
+            line-height: 26px;
+            .line-sub {
+              display: flex;
+              align-items: center;
+              margin: 0 0 10px 10px;
+              .circle-content {
+                height: 8px;
+                width: 8px;
+                background-color: $yellow;
+                border-radius: 50%;
+                -moz-border-radius: 50%;
+                -webkit-border-radius: 50%;
+                margin-right: 7px;
+              }
             }
           }
-          .three-year {
-            .tab-year {
-              display: flex;
+          .box-content {
+            margin-top: 25px;
+            .three-year {
               border: 1px solid $gray2;
-              .tab-year-sub {
-                width: 33.33%;
+              .tab-year {
                 display: flex;
-                align-items: center;
-                justify-content: center;
-                padding: 18px 0;
-                background-color: $gray;
-                font-weight: 400;
-                font-size: 20px;
-                color: $black;
-                font-family: "Montserrat";
+                .tab-year-sub {
+                  width: 33.33%;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  padding: 18px 0;
+                  background-color: $gray;
+                  font-weight: 400;
+                  font-size: 20px;
+                  color: $black;
+                  font-family: "Montserrat";
+                }
+                .tab-year-two {
+                  margin: 0 1px;
+                }
+                .tab-year-active {
+                  margin-top: -1px;
+                  border-top: 5px solid $yellow;
+                  background-color: $white;
+                }
               }
-              .tab-year-two {
-                margin: 0 1px;
+              .tab-year-content-active {
+                display: block !important;
               }
-              .tab-year-active {
-                margin-top: -1px;
-                border-top: 5px solid $yellow;
-                background-color: $white;
-              }
-            }
-            .year-one {
-              .title-tab-year {
-              }
-              .line-content {
-                .line-sub {
-                  .line-sub-title {
+              .tab-year-content {
+                display: none;
+                padding: 16px;
+                .title-tab-year {
+                  font-family: "Montserrat";
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 16px;
+                  line-height: 24px;
+                  color: $black;
+                  margin: 10px 0 20px 0;
+                  text-transform: capitalize;
+                }
+                .line-content {
+                  margin-left: 10px;
+                  .line-sub {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    margin-bottom: 25px;
+                    .line-sub-title {
+                      display: flex;
+                      align-items: center;
+                      font-family: "Montserrat";
+                      font-style: normal;
+                      font-weight: 400;
+                      font-size: 16px;
+                      line-height: 24px;
+                      color: $black;
+                      margin-bottom: 5px;
+                      text-transform: capitalize;
+                      img {
+                        margin-right: 5px;
+                      }
+                    }
+                    .line-sub-content {
+                      display: none;
+                      font-weight: 400;
+                      font-size: 16px;
+                      color: $black3;
+                      margin-left: 20px;
+                    }
                   }
-                  .line-sub-content {
+                  .line-sub-active {
+                    .line-sub-title {
+                      img {
+                        transform: rotate(90deg);
+                      }
+                    }
+                    .line-sub-content {
+                      display: block !important;
+                    }
                   }
                 }
               }
             }
           }
+          .content-requirement {
+            margin: 25px 0 20px 0;
+            padding: 27px 24px;
+            background: #f7f7f7;
+            .title-requirement {
+              display: flex;
+              align-items: center;
+              font-weight: 700;
+              font-size: 16px;
+              font-family: "Montserrat";
+              color: $black;
+              margin-bottom: 30px;
+              img {
+                margin-right: 18px;
+              }
+            }
+            .line-sub {
+              width: 100%;
+              display: flex;
+              align-items: flex-start;
+              .line-sub-title {
+                width: 20%;
+                display: flex;
+                align-items: center;
+                font-weight: 400;
+                font-size: 16px;
+                font-family: "Montserrat";
+                text-transform: capitalize;
+                color: $black;
+                img {
+                  margin-right: 5px;
+                }
+              }
+              .line-sub-content {
+                width: 80%;
+                font-weight: 400;
+                font-size: 16px;
+                font-family: "PT Serif";
+                text-transform: capitalize;
+                color: $black;
+                white-space: pre-line;
+                line-height: 24px;
+              }
+            }
+            .line-content:not(:last-child) {
+              margin-bottom: 14px;
+            }
+            .line-sub:not(:last-child) {
+              margin-bottom: 45px;
+            }
+          }
         }
-        .line-content:not(:last-child) {
-          margin-bottom: 14px;
+      }
+      .box-advertise {
+        margin-left: 35px;
+        width: 25%;
+        box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.05);
+        border-radius: 0px;
+        height: 710px;
+        img {
+          width: 100%;
+          background-size: cover;
+        }
+        .line-advertise {
+          height: auto;
+          .line-content-advertise {
+            .title-advertise {
+              img {
+                height: 32px;
+                width: 32px;
+              }
+            }
+            .content-advertise {
+              font-family: "Montserrat";
+              font-style: normal;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 24px;
+            }
+          }
+        }
+      }
+    }
+    .information-more {
+      width: 85%;
+      margin-top: 70px;
+      .title-information-more {
+        font-family: "Montserrat";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 26px;
+        color: $black2;
+        margin-bottom: 20px;
+      }
+      .content-information-more {
+        display: flex;
+        width: 100%;
+        .box-image {
+          display: flex;
+          flex-direction: column;
+          width: calc((100% - 60px) / 3);
+          .student-information {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 6px 14px;
+            background: $gray3;
+            img {
+              background-size: cover;
+            }
+            .student-name {
+              font-family: "Montserrat";
+              font-style: normal;
+              font-weight: 700;
+              font-size: 16px;
+              line-height: 26px;
+              color: $black;
+            }
+            .student-des {
+              font-family: "PT Serif";
+              font-style: normal;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 24px;
+              color: $black;
+            }
+          }
+        }
+        .box-image:not(:last-child) {
+          margin-right: 30px;
+        }
+        .line-image {
+          display: flex;
+          width: 100%;
+          .professor-information {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 14px 21px;
+            background: $gray3;
+            img {
+              background-size: cover;
+            }
+            .professor-name {
+              font-family: "Montserrat";
+              font-style: normal;
+              font-weight: 700;
+              font-size: 16px;
+              line-height: 26px;
+              color: $black;
+            }
+            .professor-title,
+            .professor-des {
+              font-family: "Montserrat";
+              font-style: normal;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 26px;
+              color: $black2;
+            }
+            .professor-title {
+              font-family: "Montserrat";
+              margin: 11px 0;
+            }
+            .professor-des {
+              font-family: "PT Serif";
+            }
+          }
         }
       }
     }
