--- a/styles/style.scss
+++ b/styles/style.scss
@@ -87,6 +87,7 @@ body {
                   font-size: 20px;
                   color: $black;
                   font-family: "Montserrat";
+                  cursor: pointer;
                 }
                 .tab-year-two {
                   margin: 0 1px;
@@ -223,10 +224,14 @@ body {
         .line-advertise {
           height: auto;
           .line-content-advertise {
+            padding: 20px 20px 0 20px;
             .title-advertise {
+              display: flex;
+              align-items: center;
               img {
                 height: 32px;
                 width: 32px;
+                margin-right: 17px;
               }
             }
             .content-advertise {
@@ -235,7 +240,57 @@ body {
               font-weight: 400;
               font-size: 16px;
               line-height: 24px;
+              margin-top: 14px;
+              .line-sub-advertise {
+                margin-bottom: 15px;
+                .line-sub-advertise-title {
+                  img {
+                    height: 12px;
+                    width: 16px;
+                    margin-right: 6px;
+                  }
+                }
+                .line-sub-advertise-option {
+                  font-family: "PT Serif";
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 14px;
+                  line-height: 16px;
+                  text-transform: capitalize;
+                  margin-left: 24px;
+                  border-bottom: 1px solid #f3b600;
+                  margin-top: 5px;
+                }
+                .line-sub-advertise-note {
+                  font-family: "PT Serif";
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 14px;
+                  line-height: 16px;
+                  text-transform: capitalize;
+                  margin-left: 24px;
+                  margin-top: 5px;
+                  color: $black2;
+                }
+              }
             }
+          }
+        }
+        .btn-advertise {
+          padding: 0 20px;
+          button {
+            background: #ffb606;
+            border: 1px solid #ffb606;
+            border-radius: 3px;
+            padding: 17px 0;
+            width: 100%;
+            font-family: "PT Serif";
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 16px;
+            text-align: center;
+            text-transform: capitalize;
           }
         }
       }
@@ -326,6 +381,20 @@ body {
               font-family: "PT Serif";
             }
           }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  body {
+    .container {
+      .main-article {
+        display: block;
+        .box-advertise {
+          margin-left: 0px;
+          width: 50%;
         }
       }
     }
